--- a/lang/system/da.xml
+++ b/lang/system/da.xml
@@ -6,7 +6,7 @@
 			<open_pref_path>Open Pref Path</open_pref_path>
 			<install_firmware>Install Firmware</install_firmware>
 			<install_pkg>Install .pkg</install_pkg>
-			<install_zip>Install .zip, .vpk</install_zip>
+			<install_zip>Install .vpk</install_zip>
 			<install_license>Install License</install_license>
 			<exit>Afslut</exit>
 		</file>
