--- a/lang/system/en.xml
+++ b/lang/system/en.xml
@@ -7,7 +7,7 @@
 			<open_textures_path>Open Textures Path</open_textures_path>
 			<install_firmware>Install Firmware</install_firmware>
 			<install_pkg>Install .pkg</install_pkg>
-			<install_zip>Install .zip, .vpk</install_zip>
+			<install_zip>Install .vpk</install_zip>
 			<install_license>Install License</install_license>
 			<exit>Exit</exit>
 		</file>
