--- a/lang/user/id.xml
+++ b/lang/user/id.xml
@@ -7,7 +7,7 @@
 			<open_textures_path>Buka Textur Path</open_textures_path>
 			<install_firmware>Install Firmware</install_firmware>
 			<install_pkg>Install .pkg</install_pkg>
-			<install_zip>Install .zip, .vpk</install_zip>
+			<install_zip>Install .vpk</install_zip>
 			<install_license>Install lisensi</install_license>
 			<exit>Keluar</exit>
 		</file>
