--- a/lang/system/en-gb.xml
+++ b/lang/system/en-gb.xml
@@ -338,6 +338,7 @@ Please connect a controller that is compatible with SDL2.</not_connected>
 		<toggle_gui_visibility_description>Toggles between showing and hiding the GUI at the top of the screen while the app is running.</toggle_gui_visibility_description>
 		<miscellaneous>Miscellaneous</miscellaneous>
 		<toggle_texture_replacement>Toggle Texture Replacement</toggle_texture_replacement>
+		<keyboard_install_vpk>Install VPK</keyboard_install_vpk>
 		<error>Error</error>
 		<error_duplicate_key>The key is used for other bindings or it is reserved.</error_duplicate_key>
 	</controls>
